@@ -17,7 +17,7 @@ LDADD = ../googletest/lib/libgtest.la \
 
 TESTS = $(check_PROGRAMS)
 check_PROGRAMS = test_mylist test_myset test_sid test_relvbr \
-	test_release test_sid_list
+	test_release test_sid_list test_rel_list
 
 test_mylist_SOURCES = test_mylist.cc
 test_myset_SOURCES = test_myset.cc
@@ -25,3 +25,4 @@ test_sid_SOURCES = test_sid.cc
 test_relvbr_SOURCES = test_relvbr.cc
 test_release_SOURCES = test_release.cc
 test_sid_list_SOURCES = test_sid_list.cc
+test_rel_list_SOURCES = test_rel_list.cc
